--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -3,7 +3,7 @@
 @plugin "@tailwindcss/forms";
 @plugin "@tailwindcss/typography";
 
-@import "../../../vendor/javascript/tw-animate-css.js";
+@import "tw-animate-css.js";
 
 @custom-variant dark (&:is(.dark *));
 
